Add new landing image. Change text.

--- a/index.html
+++ b/index.html
@@ -128,11 +128,9 @@
                                     <div class="row">
                                         <div class="col-sm-9 col-sm-offset-2" wow fadeInRight" data-wow-duration="700ms">
                                             <div class="single_about_right_content">
-                                                <h3>What we're all about</h3>
+                                                <h2 class="section-header">About</h2>
                                                 <p>The foundation of every community is the <span class="bold-text">land</span> and all its <span class="bold-text">natural resources</span>. Then, we build. We build homes, businesses, schools, parks, shops, and restaurants. And the land becomes a place. Then, we add people. People from all walks of life, all shapes and sizes and colors. And we’ve created a <span class="bold-text">community</span>. The place we call <span class="bold-text">home</span>.</p>
                                                 <p>But, all this takes planning. And, <span class="bold-text">it all starts with the land</span>.</p>
-                                                <p>At Inland Planning, we plan events to gather and engage people, solve problems, share ideas, and ignite the entrepreneurial spirit. We carry out projects to support communities planning for their future. </p>
-                                                <p>If you’re about empowering people and responsible resource management, we’re here to help you do it.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -152,7 +150,7 @@
                                 <div class="main_team sections text-center">
                                     <div class="row">
                                         <div class="head_title text-center">
-                                            <h3>Who we're working with</h3>
+                                            <h2>Who we're working with</h2>
                                         </div>
                                         <div class="col-sm-4 col-xs-12">
                                             <div class="single_team_content">
