Add favicon and fix mobile nav size

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/magnific-popup.css">
         <!--        <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">-->
+        <link rel="shortcut icon" type="image" href="assets/images/favicon.ico"/>
 
 
         <!--For Plugins external css-->
