Change fonts and mobile font sizes and positions.

--- a/index.html
+++ b/index.html
@@ -93,22 +93,11 @@
                                     </div>
                                     <div class="single_home_slider">
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                            <h2>We Are Awesome Creative Agency</h2>
-                                            <div class="separator"></div>
-                                            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                                                Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, 
-                                                nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a 
-                                                sit amet mauris. Morbi accumsan ipsum velit.</p>
+                                            
                                         </div>
                                     </div>
                                     <div class="single_home_slider">
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                            <h2>We Are Awesome Creative Agency</h2>
-                                            <div class="separator"></div>
-                                            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                                                Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, 
-                                                nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a 
-                                                sit amet mauris. Morbi accumsan ipsum velit.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -124,8 +113,8 @@
                         <div class="main_about_area sections col-sm-12 col-md-12">
                             <div class="">
                                 <h2 class="section-header">About</h2>
-                                <p class="about-text col-sm-8 col-sm-offset-2">The foundation of every community is the land and all its natural resources. Then, we build. We build homes, businesses, schools, parks, shops, and restaurants. And the land becomes a place. Then, we add people. People from all walks of life, all shapes and sizes and colors. And we’ve created a community. The place we callhome.</p>
-                                <p class="about-text bold-text col-sm-8 col-sm-offset-2">But, all this takes planning. And, it all starts with the land.</p>
+                                <p class="about-text col-sm-8 col-sm-offset-2">The foundation of every community is the <span class="bold-text">land</span> and all its <span class="bold-text">natural resources</span>. Then, we build. We build homes, businesses, schools, parks, shops, and restaurants. And the land becomes a place. Then, we add people. People from all walks of life, all shapes and sizes and colors. And we’ve created a community. The place we call <span class="bold-text">home</span>.</p>
+                                <p class="about-text col-sm-8 col-sm-offset-2">But, all this takes planning. And, it all <span class="bold-text">starts with the land</span>.</p>
                             </div>
                         </div>
                     </div>
@@ -145,8 +134,8 @@
                                         <div class="col-sm-4 col-xs-12">
                                             <div class="single_team_content">
                                                 <div class="single_team_text">
-                                                    <a href="http://businessforwater.org/"><h3>Business for Water Stewardship</h3></a>
-                                                    <p>Outdoor Retailer Summer Market 2018</p>
+                                                    <a href="http://businessforwater.org/" target="_blank"><h3>Business for Water Stewardship</h3></a>
+                                                    <p>Planning events centered around water conservation, policy, and advocacy in conjunction with the Outdoor Retailer Summer Market 2018.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -154,8 +143,8 @@
                                         <div class="col-sm-4 col-xs-12">
                                             <div class="single_team_content">
                                                 <div class="single_team_text">
-                                                    <a href="https://camberoutdoors.org/"><h3>Camber Outdoors</h3></a>
-                                                    <p>Pitchfest 2018</p>
+                                                    <a href="http://www.somethingindependent.com/" target="_blank"><h3>Something Independent</h3></a>
+                                                    <p>Programming and planning Trade School, a multi-day event featuring talks and exhibitions that offer a window into the real work of outdoor-inspired artists, entrepreneurs, athletes, and advocates.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -163,8 +152,8 @@
                                         <div class="col-sm-4 col-xs-12">
                                             <div class="single_team_content">
                                                 <div class="single_team_text">
-                                                    <a href="http://cityofsalida.com/departments/community-development/"><h3>City of Salida</h3></a>
-                                                    <p>Downtown Salida Parking Assessment</p>
+                                                    <a href="http://cityofsalida.com/departments/community-development/" target="_blank"><h3>City of Salida</h3></a>
+                                                    <p>Conducted a parking assessment of downtown Salida to provide data, analysis, and recommendations for local decision-makers.</p>
                                                 </div>
                                             </div>
                                         </div>
