Add instagram link and target blanks

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                                         </div>
                                         <div class="social-media-icons row">
                                             <div class="col-sm-offset-1 col-xs-offset-2">
-                                                <div class="col-xs-2"><a href=""><i class="fa fa-instagram"></i></a></div>
-                                                <div class="col-xs-2 col-xs-offset-1"><a href="https://www.linkedin.com/in/mara-hardy/"><i class="fa fa-linkedin"></i></a></div>
+                                                <div class="col-xs-2"><a href="https://www.instagram.com/inlandplanning/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a></div>
+                                                <div class="col-xs-2 col-xs-offset-1"><a href="https://www.linkedin.com/in/mara-hardy/" target="_blank"><i class="fa fa-linkedin"></i></a></div>
                                             </div>
                                         </div>
                                     </div>
